--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,11 @@ author:
   avatar           : "profile.png"
   name             : "Meng Chen"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
+  bio              : "Postdoc (Marie Skłodowska-Curie Actions Postdoctoral Fellowship (UKRI Guarantee Funding))"
+  location         : "Cambridge, United Kingdom"
   employer         : "University of Cambridge"
   uri              : # URL
-  email            : "mc2545@cam.ac.uk" 
+  email            : mc2545@cam.ac.uk"mc2545@cam.ac.uk" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
