--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Cambridge, United Kingdom"
   employer         : "University of Cambridge"
   uri              : # URL
-  mc2545@cam.ac.uk            : mc2545@cam.ac.uk"mc2545@cam.ac.uk" 
+  email            : "mc2545@cam.ac.uk" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
